# HD_workspace

./: .gitignore
C++ Testing/: test.cpp
Control/devel/: .catkin  .rosinstall  local_setup.sh
Control/devel/lib/pkgconfig/: motor_control.pc
Control/src/motor_control/src/: motor_control.cpp
catkin_ws/: aaaaaa  aaaaaaaaa  res  res2  res22  track
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/vision_no_ros/: object_list.h  panel_object.h  vector_msg.h
catkin_ws/devel/lib/pkgconfig/: detection_manager.pc  vision.pc  vision_no_ros.pc
catkin_ws/devel/lib/vision/: vision_node
catkin_ws/devel/lib/vision_no_ros/: vision_no_ros_node
catkin_ws/src/control/: CMakeLists.txt  package.xml
catkin_ws/src/control/hardware_interface/: CMakeLists.txt  package.xml
catkin_ws/src/control/hw_interface/: CMakeLists.txt  package.xml
catkin_ws/src/control/manager/: CMakeLists.txt  CMakeLists.txt.orig
catkin_ws/src/control/manager/launch/: test.launch
catkin_ws/src/control/motor_control/: CMakeLists.txt  CMakeLists.txt.orig
catkin_ws/src/control/motor_control/include/motor_control/: controller.h
catkin_ws/src/control/motor_control/include/xcontrol_v2/: network_master.h
catkin_ws/src/control/motor_control/lib/xcontrol_v2/: network_master.cpp
catkin_ws/src/control/motor_control/src/: motor_control.cpp  motor_main0.cpp  test.cpp  testt.cpp
catkin_ws/src/control/robot_config/: CMakeLists.txt  package.xml
catkin_ws/src/control/robot_description/: package.xml
catkin_ws/src/control/ros_control_boilerplate/: CMakeLists.txt  package.xml
catkin_ws/src/control/task_execution/: CMakeLists.txt  package.xml
catkin_ws/src/control/urdf_creator/: instructions.py  test.py
catkin_ws/src/detection_manager/: CMakeLists.txt  package.xml
catkin_ws/src/detection_manager/src/: ctrl_sim.cpp  detection_manager.cpp  detection_manager.h  toy_rover.py
catkin_ws/src/fake_cs/: CMakeLists.txt
catkin_ws/src/fake_cs/scripts/: HD_gamepad0.py
catkin_ws/src/vision/: CMakeLists.txt  package.xml
catkin_ws/src/vision/src/: depth_node.cpp  image_conversion.cpp  no_bridge_test.cpp
catkin_ws/src/vision_no_ros/: CMakeLists.txt
catkin_ws/src/vision_no_ros/msg/: panel_object.msg  vector_msg.msg
catkin_ws/src/vision_no_ros/src/: commander.cpp  vision_no_ros.cpp
(+71 files in other folders)
